otb-web: Rework on otb-web to use Vue.js instead of mithril.js

--- a/otb-web/files/otb-web/index.html
+++ b/otb-web/files/otb-web/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-        <meta http-equiv="Pragma" content="no-cache" />
-        <meta http-equiv="Expires" content="0" />
-        <title>OverTheBox</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="app.css" rel="stylesheet">
-    </head>
-    <body>
-        <script src="mithril.min.js"></script>
-        <script src="app.js"></script>
-    </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>OverTheBox</title>
+  <script src="/main.js" type="module"></script>
+  <link rel="modulepreload" href="/vue.esm-browser.js">
+  <link rel="modulepreload" href="/components/App.js">
+  <link href="app.css" rel="stylesheet">
+</head>
+
+<body>
+  <div id="app"></div>
+</body>
+
 </html>
